[tool.poetry]
name = "autoroute-rl"
version = "0.1.0"
description = ""
authors = ["JayChen35 <jay.chen135@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
torch = {version="^2.1.2", source="torch"}
torchvision = {version="^0.16.2", source="torch"}

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
